Edited color set